GNOME Bugzilla – Bug 641484
[patch] [regression] can't edit bookmarks name anymore
Last modified: 2011-02-04 21:24:17 UTC
Created attachment 180075 [details] [review] proposed patch bookmark renaming from the places sidebar doesn't work anymore. due to nautilus-bookmark.c::nautilus_bookmark_class_init calling g_param_spec_boolean with G_PARAM_CONSTRUCT_ONLY, all calls to nautilus_bookmark_set_custom_name print: (nautilus:15409): GLib-GObject-WARNING **: g_object_set_valist: construct property "custom-name" for object `NautilusBookmark' can't be set after construction The attached patch removes G_PARAM_CONSTRUCT_ONLY when creating the "name" and "custom-name" properties.
Ops, my bad. Pushed to master, thanks for the patch!