bookmark: don't make the name/custom-name props construct-only

This was probably a typo from the refactoring of the object.

https://bugzilla.gnome.org/show_bug.cgi?id=641484